--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -4,18 +4,9 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.hackathon.mastersofcode.hackshopcart.ShopperViewActivity$PlaceholderFragment">
+    tools:context="com.hackathon.mastersofcode.hackshopcart.AddCardActivity">
 
-    <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
+    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Card"
-        android:id="@+id/bAddCard"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:onClick="openAddCardView"/>
 
 </RelativeLayout>
