--- a/app/src/main/res/layout/fragment_shopper_view.xml
+++ b/app/src/main/res/layout/fragment_shopper_view.xml
@@ -18,4 +18,13 @@
         android:layout_alignParentStart="true"
         android:onClick="openAddCardView"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Shop"
+        android:id="@+id/shop_button"
+        android:layout_below="@+id/bAddCard"
+        android:layout_alignParentStart="true"
+        android:onClick="openCameraView"/>
+
 </RelativeLayout>
